# fcatarina-database

./: .gitignore  README.md  alumni_webscraping.py  pyproject.toml
notebooks/: egressos.ipynb  scrapystaff.ipynb
